--- a/etc/k8s/calico-vpp.yaml
+++ b/etc/k8s/calico-vpp.yaml
@@ -555,7 +555,7 @@ spec:
         # This container installs the CNI binaries
         # and CNI network config file on each node.
         - name: install-cni
-          image: calico/cni:latest
+          image: calicovpp/cni:latest
           command: ["/install-cni.sh"]
           env:
             # Name of the CNI config file to create.
@@ -598,7 +598,7 @@ spec:
         # container programs network policy and routes on each
         # host.
         - name: calico-node
-          image: calicovpp/node:v3.9.1-6
+          image: calicovpp/node:latest
           env:
             # Use Kubernetes API as the backing datastore.
             - name: DATASTORE_TYPE
