--- a/etc/k8s/calico-vpp.yaml
+++ b/etc/k8s/calico-vpp.yaml
@@ -63,31 +63,22 @@ data:
       full-coredump
       cli-listen /var/run/vpp/cli.sock
     }
-    # cpu {
-    #     main-core 0
-    #     corelist-workers 1
-    # }
+    api-trace { on }
+    cpu {
+        main-core 1
+        corelist-workers 0,2
+    }
     socksvr {
         socket-name /var/run/vpp/vpp-api.sock
     }
-    session {
-        evt_qs_memfd_seg
-    }
     dpdk {
-      dev __PCI_DEVICE_ID__
+      dev __PCI_DEVICE_ID__ { num-rx-queues 2  num-tx-queues 2 }
     }
     plugins {
-        plugin default { disable }
-        plugin dpdk_plugin.so { enable }
-        plugin nat_plugin.so { enable }
-        plugin vmxnet3_plugin.so { enable }
-        plugin rdma_plugin.so { enable }
-        plugin avf_plugin.so { enable }
-        plugin acl_plugin.so { enable }
-        plugin ikev2_plugin.so { enable }
+        plugin default { enable }
     }
     nat { endpoint-dependent }
-
+    
 ---
 # Source: calico/templates/kdd-crds.yaml
 apiVersion: apiextensions.k8s.io/v1beta1
@@ -556,6 +547,7 @@ spec:
         # and CNI network config file on each node.
         - name: install-cni
           image: calicovpp/cni:latest
+          imagePullPolicy: IfNotPresent
           command: ["/install-cni.sh"]
           env:
             # Name of the CNI config file to create.
@@ -590,6 +582,7 @@ spec:
         # to communicate with Felix over the Policy Sync API.
         - name: flexvol-driver
           image: calico/pod2daemon-flexvol:v3.9.1
+          imagePullPolicy: IfNotPresent
           volumeMounts:
           - name: flexvol-driver-host
             mountPath: /host/driver
@@ -599,7 +592,17 @@ spec:
         # host.
         - name: calico-node
           image: calicovpp/node:latest
+          imagePullPolicy: IfNotPresent
           env:
+            - name: CALICOVPP_IPSEC_ENABLED
+              value: "on"
+            - name: CALICOVPP_IPSEC_IKEV2_PSK
+              valueFrom:
+              secretKeyRef:
+                  name: calicovpp-ipsec-secret
+                  key: psk
+            - name: CALICOVPP_IPSEC_ASSUME_EXTRA_ADDRESSES
+              value: "1"
             # Use Kubernetes API as the backing datastore.
             - name: DATASTORE_TYPE
               value: "kubernetes"
@@ -617,9 +620,9 @@ spec:
             - name: CALICO_BGP_LOGSEVERITYSCREEN
               value: debug
             - name: CALICOVPP_TAP_RX_QUEUES
-              value: "1"
+              value: "2"
             - name: CALICOVPP_TAP_GSO_ENABLED
-              value: "false"
+              value: "true"
             # Cluster type to identify the deployment type
             - name: CLUSTER_TYPE
               value: "k8s,bgp"
@@ -628,7 +631,7 @@ spec:
               value: ""
             # Enable IPIP
             - name: CALICO_IPV4POOL_IPIP
-              value: "Never"
+              value: "Always"
             # Set MTU for tunnel device used if ipip is enabled
             - name: FELIX_IPINIPMTU
               valueFrom:
@@ -695,6 +698,7 @@ spec:
               mountPath: /var/run/vpp
         - name: vpp
           image: calicovpp/vpp:latest
+          imagePullPolicy: IfNotPresent
           securityContext:
             privileged: true
             capabilities:
@@ -717,6 +721,8 @@ spec:
                 configMapKeyRef:
                   name: calico-config
                   key: service_prefix
+            - name: CALICOVPP_CONFIGURE_EXTRA_ADDRESSES
+              value: "1"
             # Use Kubernetes API as the backing datastore.
             - name: DATASTORE_TYPE
               value: "kubernetes"
@@ -844,6 +850,7 @@ spec:
       containers:
         - name: calico-kube-controllers
           image: calico/kube-controllers:v3.9.1
+          imagePullPolicy: IfNotPresent
           env:
             # Choose which controllers to run.
             - name: ENABLED_CONTROLLERS
