--- a/etc/k8s/calico-vpp.yaml
+++ b/etc/k8s/calico-vpp.yaml
@@ -555,7 +555,7 @@ spec:
         # This container installs the CNI binaries
         # and CNI network config file on each node.
         - name: install-cni
-          image: calicovpp/cni:latest
+          image: calicovpp/cni:v0.4.1-calicov3.9.1
           command: ["/install-cni.sh"]
           env:
             # Name of the CNI config file to create.
@@ -598,7 +598,7 @@ spec:
         # container programs network policy and routes on each
         # host.
         - name: calico-node
-          image: calicovpp/node:latest
+          image: calicovpp/node:v0.4.1-calicov3.9.1
           env:
             # Use Kubernetes API as the backing datastore.
             - name: DATASTORE_TYPE
@@ -690,7 +690,7 @@ spec:
             - name: vpp-rundir
               mountPath: /var/run/vpp
         - name: vpp
-          image: calicovpp/vpp:latest
+          image: calicovpp/vpp:v0.4.1-calicov3.9.1
           securityContext:
             privileged: true
             capabilities:
