--- a/etc/k8s/calico-vpp.yaml
+++ b/etc/k8s/calico-vpp.yaml
@@ -616,6 +616,8 @@ spec:
               value: vpp
             - name: CALICO_BGP_LOGSEVERITYSCREEN
               value: debug
+            - name: CALICOVPP_TAP_RX_QUEUES
+             value: "1"
             # Cluster type to identify the deployment type
             - name: CLUSTER_TYPE
               value: "k8s,bgp"
