--- a/etc/k8s/calico-vpp.yaml
+++ b/etc/k8s/calico-vpp.yaml
@@ -618,6 +618,8 @@ spec:
               value: debug
             - name: CALICOVPP_TAP_RX_QUEUES
               value: "1"
+            - name: CALICOVPP_TAP_GSO_ENABLED
+              value: "false"
             # Cluster type to identify the deployment type
             - name: CLUSTER_TYPE
               value: "k8s,bgp"
