--- a/etc/k8s/calico-vpp.yaml
+++ b/etc/k8s/calico-vpp.yaml
@@ -76,9 +76,9 @@ data:
     }
     plugins {
         plugin default { enable }
+        plugin calico_plugin.so { enable }
     }
-    nat { endpoint-dependent }
-    
+
 ---
 # Source: calico/templates/kdd-crds.yaml
 apiVersion: apiextensions.k8s.io/v1beta1
@@ -602,7 +602,7 @@ spec:
                   name: calicovpp-ipsec-secret
                   key: psk
             - name: CALICOVPP_IPSEC_ASSUME_EXTRA_ADDRESSES
-              value: "1"
+              value: "0"
             # Use Kubernetes API as the backing datastore.
             - name: DATASTORE_TYPE
               value: "kubernetes"
