Fix ipsec default param
Signed-off-by: Nathan Skrzypczak <nathan.skrzypczak@gmail.com>

--- a/etc/k8s/calico-vpp.yaml
+++ b/etc/k8s/calico-vpp.yaml
@@ -595,7 +595,7 @@ spec:
           imagePullPolicy: IfNotPresent
           env:
             - name: CALICOVPP_IPSEC_ENABLED
-              value: "on"
+              value: "false"
             - name: CALICOVPP_IPSEC_IKEV2_PSK
               valueFrom:
                 secretKeyRef:
