--- a/etc/k8s/calico-vpp.yaml
+++ b/etc/k8s/calico-vpp.yaml
@@ -620,7 +620,7 @@ spec:
             - name: CALICOVPP_TAP_RX_QUEUES
               value: "1"
             - name: CALICOVPP_TAP_GSO_ENABLED
-              value: "true"
+              value: "false"
             # Cluster type to identify the deployment type
             - name: CLUSTER_TYPE
               value: "k8s,bgp"
@@ -714,6 +714,8 @@ spec:
                 configMapKeyRef:
                   name: calico-config
                   key: vpp_config_template
+            - name: CALICOVPP_IF_CONFIG_PATH
+              value: /etc/vpp/initial_if_config
             - name: SERVICE_PREFIX
               valueFrom:
                 configMapKeyRef:
